k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-balancer
  namespace: load-balancer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - load-balancer.martishin.com
      secretName: load-balancer-tls
  rules:
    - host: load-balancer.martishin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: load-balancer
                port:
                  number: 80
